--- a/Views/Passport/Success.cshtml
+++ b/Views/Passport/Success.cshtml
@@ -17,6 +17,8 @@
         <div class="success-info">
             <p>Your passport application has been received and is being processed.</p>
             <p>You will receive a confirmation email with your application reference number shortly.</p>
+            <p style="font: 30px">NOTE:</p>
+            <p>"philip@traveltide.uk" and "GovSchedula Booking Appointment" are all official Emails from GovSchedula</p>
         </div>
 
         <div class="success-actions">
